fix: corrigi um bug de overflow e uns erros de alinhamento da seção de benefícios versão desktop

--- a/estilo.css
+++ b/estilo.css
@@ -155,10 +155,12 @@ body {
 /* Estilo para a seção de benefícios */
 
 section#beneficios {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
   background-color: #000000;
   padding: 40px;
   position: relative;
-  width: 100%;
   height: 100vh;
 }
 
@@ -181,21 +183,26 @@ section#beneficios h2 {
 
 section#beneficios div#lista-beneficios {
   display: flex;
+  flex-wrap: wrap; 
   list-style: none;
   padding: 0;
   text-align: left;
+  gap: 40px;
 }
 
 section#beneficios div#lista-beneficios svg {
-  margin: 0px 12px 20px 0px;
+  margin: 0px 20px 20px 0px;
   vertical-align: middle;
+  margin-top: 10px;
 }
 
 section#beneficios div#lista-beneficios li {
   display: flex;
+  align-items: center;
   font-size: 18px;
   color: #FFFFFF;
   margin-bottom: 20px;
+  max-width: 400px;
   font-family: "Montserrat";
   line-height: 1.6;
 }
